--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine on
-RewriteRule ^([^/]*).html$ 2010/$1.html
+RewriteRule ^([^/]*).html$ http://rubyconfindia.org/2010/$1.html
 RewriteRule ^$ 2011
