--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine on
 RewriteRule ^$ 2013
-RewriteRule ^([^/]*).html$ http://rubyconfindia.org/2013/$1.html
+RewriteRule ^([^/]*).html$ 2013/$1.html
